Serialize a single composite in sameElement